--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,12 @@
-<p>navbar works!</p>
+<div class="navbar">
+    <div class="nav-container">
+        <div class="title">
+            <span>Title</span>
+        </div>
+        <ul>
+            <li>Item</li>
+            <li>Item</li>
+            <li>Item</li>
+        </ul>
+    </div>
+</div>
