--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <h5>Basic</h5>
 <p-button label="Submit"></p-button>
 <p-button label="Disabled" [disabled]="true"></p-button>
-<p-button label="Link" styleClass="p-button-link"></p-button>
+<p-button label="Reference Link" styleClass="p-button-link"></p-button>
 
 <h5>Icons</h5>
 <p-button icon="pi pi-check"></p-button>
