--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <router-outlet></router-outlet>
 <h5>Basic</h5>
 <p-button label="Submit"></p-button>
-<p-button label="Disabled" [disabled]="true"></p-button>
+<p-button label="Disabled button" [disabled]="true"></p-button>
 <p-button label="Reference Link" styleClass="p-button-link"></p-button>
 
 <h5>Icons</h5>
