--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <h5>Icons</h5>
 <p-button icon="pi pi-check"></p-button>
-<p-button label="Submit " icon="pi pi-check"></p-button>
+<p-button label="Submit button" icon="pi pi-check"></p-button>
 <p-button label="Submit" icon="pi pi-check" iconPos="right"></p-button>
 
 <h5>Severities</h5>
