--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,7 @@
 </p-button>
 <p-button label="Submit" icon="pi pi-check"></p-button>
 <p-button label="Submit" icon="pi pi-check" iconPos="right"></p-button>
-<p-panelMenu [model]="items" [style]="{'width':'300px','margin':'1em'}"></p-panelMenu>
+<p-panelMenu [model]="items" 
+[style]="{'width':'300px','height':'100vh','overflow-y':'scroll'}"
+></p-panelMenu>
 <app-footer></app-footer>
