PrimeNg Lazy loading

--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -1,2 +1,9 @@
-hai
-<app-navbar-left></app-navbar-left>
+<div class="documentation">
+    hai
+    <div class="sidebar">
+        <p-panelMenu [model]="items" 
+[style]="{'width':'300px','height':'100vh','overflow-y':'scroll'}"
+></p-panelMenu>
+    </div>
+    <div class="content"></div>
+</div>
