Node server setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 
-<app-navbar></app-navbar>
-<a [routerLink]="['./documentation']">doc</a>
+<a [routerLink]="['./documentation']"><h2>Documentation</h2></a>
 <router-outlet></router-outlet>
 
 
-
-<app-footer></app-footer>
