--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -1,4 +1,16 @@
 <div class="documentation">
+    <div class="navbar">
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            <div class="search-container">
+              <form action="/action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+              </form>
+            </div>
+          </div>
+    </div>
     <div class="sidebar">
         <p-panelMenu 
         [model]="items" [style]="{'width':'300px','height':'100vh','overflow-y':'scroll'}"></p-panelMenu>
