--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,1 +1,24 @@
-<p>homepage works!</p>
+<div class="homepage">
+    <header>
+        <div class="wrapper">
+            <div class="logo">
+                <!--<img src="https://media.istockphoto.com/id/1251629816/photo/the-perfect-setting-to-complete-work.jpg?b=1&s=170667a&w=0&k=20&c=e8mSv3z6PhT18EUmzgtdMCbQecYzhHoqu_ts8tFdN6c=" alt="">-->
+            </div>
+            <ul class="nav-area">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="welcome-text">
+            <h1>
+                <span>Wiki Doc</span>
+            </h1>
+            <a [routerLink]="['../documentation']">
+                <h2>Get Started</h2>
+            </a>
+        </div>
+    </header>
+</div>
