--- a/src/app/documentation/documentation.component.css
+++ b/src/app/documentation/documentation.component.css
@@ -24,6 +24,7 @@
     font-weight: 300;
     font-size: 19px;
     line-height: 30px;
+    overflow-wrap: break-word;
 }
 
 .navbar {
@@ -62,6 +63,7 @@
 
 .topnav .search-container {
     float: right;
+    margin-right: 10px;
 }
 
 .topnav input[type=text] {
