--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -7,6 +7,8 @@
             <div class="search-container">
               <form action="/action_page.php">
                 <input type="text" placeholder="Search.." name="search">
+                <button pButton type="button" class="p-button-raised p-button-sm p-button-rounded 
+                 " icon="pi pi-search" ></button>
               </form>
             </div>
           </div>
