--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,17 @@
-<div class="navbar">
-    <div class="nav-container">
-        <div class="title">
-            <span>Title</span>
-        </div>
-        <ul>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-        </ul>
-    </div>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
 </div>
+
+<div style="padding-left:16px">
+
+    
+</div>
+
