--- a/src/app/documentation/documentation.component.css
+++ b/src/app/documentation/documentation.component.css
@@ -16,7 +16,7 @@
 }
 
 .content-header {
-    margin: 20px 0;
+    margin: 20px 0 10px 0;
     font-size: 2rem;
 }
 
@@ -73,4 +73,20 @@
     margin-right: 16px;
     border: none;
     font-size: 17px;
+}
+.search{
+    display: inline-block;
+    margin: 7px;
+}
+.content-footer{
+    background-color: aqua;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+}
+.footer .items{
+    margin: 30px 10px;
+    padding: 10px 20px;
+    border: 1px solid red;
 }
