--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,6 +2,10 @@
 .topnav {
     overflow: hidden;
     background-color: #e9e9e9;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .topnav a {
