--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="../">Home</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <div class="search-container">
